--- a/tokens/0x949bed886c739f1a3273629b3320db0c5024c719.yaml
+++ b/tokens/0x949bed886c739f1a3273629b3320db0c5024c719.yaml
@@ -1,5 +1,5 @@
 ---
-addr: '0x949bEd886c739f1A3273629b3320db0C5024c719'
+addr: '0x949bed886c739f1a3273629b3320db0c5024c719'
 decimals: 9
 description: The AMIS designate Asset Management Instruments acting as one-stop shop Multi-dimensional, multi-purposes fast moving, versatile transactional vehicles running on the ethereum blockchain natively but also on BitShares and Waves cascaded blockchains.
 links:
@@ -7,7 +7,7 @@ links:
 - Email: mailto:info@amisolution.net
 - Telegram: https://t.me/amis_token
 - Twitter: https://twitter.com/amis_erc20
-- Website: http://erc20-amis.amisolution.net/
+- Website: https://erc20-amis.amisolution.net/
 - Facebook: https://www.facebook.com/amis.erc20
 - Blog: https://medium.com/@AMIS_ERC20
 - Reddit: https://www.reddit.com/r/AMIS_ERC20/
