--- a/tokens/0x3edd235c3e840c1f29286b2e39370a255c7b6fdb.yaml
+++ b/tokens/0x3edd235c3e840c1f29286b2e39370a255c7b6fdb.yaml
@@ -8,7 +8,7 @@ links:
 - Bitcointalk: https://bitcointalk.org/index.php?topic=2992599.0
 - Email: mailto:support@cmbusinesstoken.com
 - Facebook: https://www.facebook.com/Coinmarketbr
-- Github: https://github.com/coinmarketbr
+- Github: https://github.com/CoinMarketBrasil
 - Telegram: https://t.me/cmbtoken
 - Twitter: https://twitter.com/CoinMarketBr
 - Website: https://cmbusinesstoken.com
