--- a/tokens/0x3edd235c3e840c1f29286b2e39370a255c7b6fdb.yaml
+++ b/tokens/0x3edd235c3e840c1f29286b2e39370a255c7b6fdb.yaml
@@ -2,8 +2,7 @@
 addr: '0x3edd235c3e840c1f29286b2e39370a255c7b6fdb'
 decimals: 8
 description: >-
-  COINMARKETBRASIL PROVES THE DECENTRALIZATION OF OPERATIONS IN ERP SYSTEMS, VALIDATING DATA IN A RELIABLE, SAFE AND EFFICIENT WAY, 
-  BY LEVERAGING AUTOMATED SMART CONTRACTS TO ENTERPRISE SYSTEMS, USING BLOCKCHAIN PROTOCOLS.
+Coinmarketbrasil acts in the development of DAPPs and systems based on blockchain.
 links:
 - Bitcointalk: https://bitcointalk.org/index.php?topic=2992599.0
 - Email: mailto:support@cmbusinesstoken.com
@@ -13,5 +12,5 @@ links:
 - Twitter: https://twitter.com/CoinMarketBr
 - Website: https://cmbusinesstoken.com
 - Whitepaper: https://cmbusinesstoken.com/CMBToken-White-Paper-EN.pdf
-name: CMB Token 
+name: CMBToken 
 symbol: CMBT
