--- a/tokens/0x3edd235c3e840c1f29286b2e39370a255c7b6fdb.yaml
+++ b/tokens/0x3edd235c3e840c1f29286b2e39370a255c7b6fdb.yaml
@@ -4,13 +4,10 @@ decimals: 8
 description: >-
 Coinmarketbrasil acts in the development of DAPPs and systems based on blockchain.
 links:
-- Bitcointalk: https://bitcointalk.org/index.php?topic=2992599.0
+- Website: https://cmbusinesstoken.com/
 - Email: mailto:support@cmbusinesstoken.com
-- Facebook: https://www.facebook.com/Coinmarketbr
-- Github: https://github.com/CoinMarketBrasil
 - Telegram: https://t.me/cmbtoken
 - Twitter: https://twitter.com/CoinMarketBr
-- Website: https://cmbusinesstoken.com
-- Whitepaper: https://cmbusinesstoken.com/CMBToken-White-Paper-EN.pdf
-name: CMBToken 
+- Facebook: https://www.facebook.com/Coinmarketbr
+name: CMB Token
 symbol: CMBT
