--- a/tokens/0x3edd235c3e840c1f29286b2e39370a255c7b6fdb.yaml
+++ b/tokens/0x3edd235c3e840c1f29286b2e39370a255c7b6fdb.yaml
@@ -1,9 +1,8 @@
 ---
 addr: '0x3edd235c3e840c1f29286b2e39370a255c7b6fdb'
 decimals: 8
-description: >-
-Coinmarketbrasil acts in the development of DAPPs and systems based on blockchain.
-- links:
+description: Coinmarketbrasil acts in the development of DAPPs and systems based on blockchain.
+links:
 - Website: https://cmbusinesstoken.com/
 - Email: mailto:support@cmbusinesstoken.com
 - Telegram: https://t.me/cmbtoken
