--- a/tokens/0xc2856a8310af421a2a65de16428c2dec6ceacb36.yaml
+++ b/tokens/0xc2856a8310af421a2a65de16428c2dec6ceacb36.yaml
@@ -11,7 +11,7 @@ links:
 - Email: mailto:info@gocryp.to
 - Facebook: https://www.instagram.com/jamaicoin
 - Github: https://github.com/JamaiCoin/JamaiCoin/
-- Telegram: https://t.me/backtoearth
+- Twitter: https://twitter.com/jamaicoin
 - Whitepaper: https://gocryp.to/whitepaper
 name: JamaiCoin
 symbol: YAH
