--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -20,12 +20,12 @@ jobs:
       with:
         repo-token: ${{ steps.generate_token.outputs.token }}
         stale-issue-message: >
-          This issue is stale because it has been open 21 days with no activity.
+          This issue is stale because it has been open 8 weeks with no activity.
           We probably just don't have the bandwith to work on this. Sorry! 
           Unless there is an update, it will be closed in 7 days.
-        stale-pr-message: 'This pull request is stale because it has been open 21 days with no activity. Unless there is an update, it will be closed in 7 days.'
+        stale-pr-message: 'This pull request is stale because it has been open 8 weeks with no activity. Unless there is an update, it will be closed in 7 days.'
         stale-issue-label: 'stale'
         stale-pr-label: 'stale'
-        days-before-stale: 21
+        days-before-stale: 57
         days-before-close: 7
         operations-per-run: 3000
